--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,16 +1,17 @@
-html,body{
-  margin:0;
-  height:100%;
-  overflow:hidden;
+.row {
+  margin: 0;
 }
-img{
-  min-height:100%;
-  min-width:100%;
-  height:auto;
-  width:auto;
-  position:absolute;
-  top:-100%; bottom:-100%;
-  left:-100%; right:-100%;
-  margin:auto;
+
+.main-img {
+  position: absolute;
+  top: 0;
   z-index: -1;
+  margin-top: -20px;
+  width: 100%;
+}
+
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 45%;
 }
