--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,7 +1,15 @@
-body {
-  background-color: palevioletred;
+#login-form {
+  margin-top: 50px;
 }
 
-.header {
-  color: darkcyan;
+.login-img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.login-header {
+  color: white;
 }
