--- a/src/components/SingleSavedTrip/SingleSavedTrip.scss
+++ b/src/components/SingleSavedTrip/SingleSavedTrip.scss
@@ -1,5 +1,43 @@
-
 .isCompleted {
-  color: white;
-  background-color: green;
+  background-color: rgb(53, 197, 40);
+
+  h2, h3, h4, h5, p {
+    color: white;
+  }
+
+  .card-activity {
+    border-color: white;
+  }
+
+  .card-button-group a {
+    box-shadow: 0 2px 5px white;
+  }
+}
+
+.card-description {
+  text-align: justify;
+}
+
+.card-activity {
+  border-bottom: 1px solid black;
+  text-align: center;
+}
+
+.card-link {
+  margin-bottom: 10px;
+}
+
+.card-button-group {
+  text-align: center;
+
+  a {
+    margin-left: 2px;
+    margin-right: 2px;
+    box-shadow: 0 2px 5px grey;
+  }
+}
+
+.card {
+  position: relative;
+  z-index: 2;
 }
