--- a/src/components/AllSavedTrips/AllSavedTrips.scss
+++ b/src/components/AllSavedTrips/AllSavedTrips.scss
@@ -1,6 +1,11 @@
 .all-saved-trip-container {
   background-image: url(https://images.unsplash.com/photo-1519731076138-ad173250029a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=edf2c722daa5bf373c98a22477b33c55&auto=format&fit=crop&w=934&q=80);
+  min-height: 1000px;
   background-repeat: repeat-y;
   background-size: cover;
   position: relative;
+
+  h1 {
+    text-align: center;
+  }
 }
