finished styling of main components on allTrips and savedTrips

--- a/src/components/SingleSavedTrip/SingleSavedTrip.scss
+++ b/src/components/SingleSavedTrip/SingleSavedTrip.scss
@@ -16,11 +16,13 @@
 
 .card-description {
   text-align: justify;
+  margin-top: 5px;
 }
 
 .card-activity {
-  border-bottom: 1px solid black;
+  border-bottom: 3px solid black;
   text-align: center;
+  padding-bottom: 10px;
 }
 
 .card-link {
